--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.3'
 
 services:
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: foxygend/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
 
@@ -15,29 +13,33 @@ services:
     env_file:
       - ./.env
 
-  # backend:
-  #   image: foxygend/foodgram:latest
-  #   restart: always
-  #   volumes:
-  #     - static_value:/app/static/
-  #     - media_value:/app/media/
-  #   depends_on:
-  #     - db
-  #   links:
-  #     - db:db
-  #   env_file:
-  #     - ./.env
+  backend:
+    image: foxygend/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    links:
+      - db:db
+    env_file:
+      - ./.env
 
   nginx:
     image: nginx:1.19.3
-    network_mode: host
-    # ports:
-    #   - "80:80"
+    ports:
+      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/usr/share/nginx/html/backend_static/:ro
+      - media_value:/usr/share/nginx/html/backend_media:ro
+    depends_on:
+      - backend
 
 volumes:
+  postgres_data:
   static_value:
   media_value:
