--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   frontend:
-    image: foxygend/foodgram_frontend:latest
+    image: foxygend/foodgram_frontend:v1.1.1
     volumes:
       - ../frontend/:/app/result_build/
 
@@ -14,7 +14,7 @@ services:
       - ./.env
 
   backend:
-    image: foxygend/foodgram_backend:latest
+    image: foxygend/foodgram_backend:v1.1.1
     restart: always
     volumes:
       - static_value:/app/static/
