--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -40,14 +40,16 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.1.1
+          context: backend
+          file: backend/foodgram/Dockerfile
       - name: Push frontend to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./frontend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.1.1
+          context: frontend
+          file: frontend/Dockerfile
 
   # deploy:
   #   runs-on: ubuntu-latest
