--- a/backend/foodgram/Dockerfile
+++ b/backend/foodgram/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.7-slim
 
 WORKDIR /app 
 
-COPY requirements.txt / 
+COPY requirements.txt .
 
-RUN pip3 install -r /requirements.txt --no-cache-dir 
+RUN pip3 install -r requirements.txt --no-cache-dir 
 
 COPY ./ /
 
