--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -22,34 +22,34 @@ jobs:
       run: |
         python -m flake8
 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push backend to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.1.1
-          context: ./backend
-          file: backend/foodgram/Dockerfile
-      - name: Push frontend to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.1.1
-          context: ./frontend/
-          file: frontend/Dockerfile
+  # build_and_push_to_docker_hub:
+  #   name: Push Docker image to Docker Hub
+  #   runs-on: ubuntu-latest
+  #   needs: tests
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v2 
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1 
+  #     - name: Login to Docker 
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Push backend to Docker Hub
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:v1.1.1
+  #         context: ./backend/
+  #         file: ./backend/foodgram/Dockerfile
+  #     - name: Push frontend to Docker Hub
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:v1.1.1
+  #         context: ./frontend/
+  #         file: frontend/Dockerfile
 
   # deploy:
   #   runs-on: ubuntu-latest
