--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,13 +8,6 @@ services:
     env_file:
       - ./.env
 
-  frontend:
-    image: foxygend/foodgram_frontend:v1.1.1
-    volumes:
-      - ../frontend/:/app/result_build/
-    depends_on:
-      - backend
-
   backend:
     image: foxygend/foodgram_backend:v1.1.1
     restart: always
@@ -28,6 +21,13 @@ services:
     env_file:
       - ./.env
 
+  frontend:
+    image: foxygend/foodgram_frontend:v1.1.1
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -39,7 +39,7 @@ services:
       - static_value:/usr/share/nginx/html/backend_static/:ro
       - media_value:/usr/share/nginx/html/backend_media:ro
     depends_on:
-      - backend
+      - frontend
 
 volumes:
   postgres_data:
