--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,22 +1,25 @@
-upstream foodgram_backend {
-    server backend:8000;
-}
-
 server {
     listen 80;
     server_tokens off;
 
-    location /api/docs/ {
+    location /media/ {
+        root /var/html/django;
+    }
+
+    location /static/admin/ {
+        root /var/html/django;
+    }
+    location ~ ^/api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
 
-    location /api/admin/ {
+    location ~ ^/(api|admin)/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://foodgram_backend;
+        proxy_pass http://backend:8000;
     }
 
     location / {
