--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,13 +2,18 @@ server {
     listen 80;
     server_tokens off;
 
-    location /media/ {
-        root /var/html/django;
+    location /django/media/ {
+        root /var/html/;
+    }
+
+    location /django/static/ {
+        root /var/html/;
     }
 
     location /static/admin/ {
         root /var/html/django;
     }
+
     location ~ ^/api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
