--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     image: foxygend/foodgram_backend:v1.1.1
     restart: always
     volumes:
-      - static_value:/app/django/static/
-      - media_value:/app/django/media/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     links:
@@ -36,12 +36,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/django/static/
-      - media_value:/var/html/django/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - backend
 
 volumes:
+  db:
   postgres_data:
   static_value:
   media_value:
