--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,29 +2,32 @@ server {
     listen 80;
     server_tokens off;
 
-    location /django/media/ {
-        root /var/html/;
-    }
-
-    location /django/static/ {
-        root /var/html/;
-    }
-
-    location /static/admin/ {
-        root /var/html/django;
-    }
-
-    location ~ ^/api/docs/ {
+    location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
 
-    location ~ ^/(api|admin)/ {
+    location /api/ {
         proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
+    location /media/ {
+        root /var/html;
+    }
+
+    location /static/admin/ {
+        root /var/html;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
     }
 
     location / {
