--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,6 @@
 server {
     listen 80;
+    server_name 158.160.5.175;
     server_tokens off;
 
     location /api/docs/ {
@@ -16,6 +17,10 @@ server {
 
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
+    }
+
+    location /static/ {
+        root /var/html;
     }
 
     location /media/ {
