--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,19 +8,12 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
-    location /api/ {
+    location ~ ^/(api|admin)/ {
         proxy_set_header        Host $host;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_pass http://backend:8000;
-    }
-
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
-    }
-
-    location /static/ {
-        root /var/html;
     }
 
     location /media/ {
@@ -29,10 +22,6 @@ server {
 
     location /static/admin/ {
         root /var/html;
-    }
-
-    location /static/rest_framework/ {
-        root /var/html/;
     }
 
     location / {
