--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -17,11 +17,15 @@ server {
     }
 
     location /media/ {
-        root /var/html;
+        root /var/html/;
+    }
+
+    location /static_backend/ {
+        root /var/html/;
     }
 
     location /static/admin/ {
-        root /var/html;
+        root /var/html/;
     }
 
     location / {
